// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz sc-fiCYzP guNYpz"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iWVaOa FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 dAEOYw"
          disabled=""
        >
          <div
            class="StyledBox-sc-13pk1d4-0 fNATTp StyledRadioButton-g1f6ld-5 cQxxvY"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 dNUTGX"
              disabled=""
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 fXkXzv StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 hAouEX"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2 KffOf"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz sc-fiCYzP guNYpz"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iWVaOa FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 jBepmx"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 fNATTp StyledRadioButton-g1f6ld-5 cQxxvY"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 bRmCoz"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 fXkXzv StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 hAouEX"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2 KffOf"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a form field label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz sc-fiCYzP guNYpz"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 ZJQGZ"
        for="some-input"
      >
        A brilliant input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 iWVaOa FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 jBepmx"
          for="some-input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 fNATTp StyledRadioButton-g1f6ld-5 cQxxvY"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 bRmCoz"
              id="some-input"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 fXkXzv StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 hAouEX"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2 KffOf"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz sc-fiCYzP guNYpz"
      tabindex="0"
    >
      <span
        class="StyledText-sc-1sadyjn-0 bmnpwp"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 iWVaOa FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 jBepmx"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 fNATTp StyledRadioButton-g1f6ld-5 cQxxvY"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 bRmCoz"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 fXkXzv StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 hAouEX"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2 KffOf"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz sc-fiCYzP guNYpz"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iWVaOa FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 jBepmx"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 fNATTp StyledRadioButton-g1f6ld-5 cQxxvY"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 bRmCoz"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 fXkXzv StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 hAouEX"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2 KffOf"
          >
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 fnpEr"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz sc-fiCYzP guNYpz"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iWVaOa FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 jBepmx"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 fNATTp StyledRadioButton-g1f6ld-5 cQxxvY"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 bRmCoz"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 fXkXzv StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 hAouEX"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2 KffOf"
          >
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 bTUvUa"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
